--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!--DOCTYPE html-->
 <html lang="en">
 <head>
@@ -87,8 +86,8 @@
         <thead class="bg-success text-white">
           <tr>
             <th style="border: 1px solid #dee2e6; font-size: 0.8rem; width: 5%; text-align: center;">No.</th>
-            <th style="border: 1px solid #dee2e6; font-size: 0.8rem; width: 60%; text-align: center;">Title</th>
-            <th style="border: 1px solid #dee2e6; font-size: 0.8rem; width: 35%;">Actions</th>
+            <th style="border: 1px solid #dee2e6; font-size: 0.8rem; width: 60%; text-align: center;">Actions</th>
+            <th style="border: 1px solid #dee2e6; font-size: 0.8rem; width: 35%;">Title</th>
             <!-- Added Actions header -->
           </tr>
         </thead>
@@ -105,9 +104,9 @@
     database.ref('/notepad').on('child_added', function (snapshot) {
       const website = snapshot.val();
       const newRow = websiteTableBody.insertRow(0);
-      const cellNumber = newRow.insertCell(0);
-      const cellName = newRow.insertCell(1);
-      const cellActions = newRow.insertCell(2);
+      const cellNumber = newRow.insertCell(0);      
+      const cellActions = newRow.insertCell(1);
+      const cellName = newRow.insertCell(2);
 
       cellNumber.textContent = ++rowNumber;
       cellName.textContent = website.name;
