--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
   </script>
     
   <style>
+* {
+      box-sizing: border-box;
+    }
+    
   .cellActions {
   max-width: 200px;
   margin: 0 auto;
